fixed layout issue of order page

--- a/src/scss/layout/_adminLayout.scss
+++ b/src/scss/layout/_adminLayout.scss
@@ -7,13 +7,14 @@
   top: 0;
   z-index: 3;
 }
+
 .admin-main-container {
   background-color: #f1f5f9;
   padding-bottom: 2rem;
-  height: calc(100vh - 80px);;
+  min-height: calc(100vh - 80px);;
 
   .admin-main-wrapper {
-    height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px);
     // max-width: 1280px;
     margin: auto;
     display: grid;
